# PersonaTesting

./: .gitignore  CHANGELOG.md  README.md
persona_eval/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
persona_eval/config/: default_config.yaml  quickstart_config.yaml
persona_eval/data/gpqa/: questions.jsonl
persona_eval/data/mmlu_pro/: questions.jsonl
persona_eval/src/: __init__.py  cli.py  config.py  data_models.py  metrics.py  model_api.py  prompts.py  runners.py  sampling.py  scoring.py
persona_eval/src/utils/: __init__.py  io_utils.py  logging_utils.py
